classDiagram
  class PedidoController {
    +crearPedido(pedido)
    +actualizarPedido(pedido)
    +eliminarPedido(id)
    +buscarPedido(cliente, id)
    +obtenerTodos()
  }

  class LoginController {
    +login(request)
  }

  class LoginRequest {
    -nombre
    -password
    +getNombre()
    +setNombre(nombre)
    +getPassword()
    +setPassword(password)
  }

  class ViewController {
    +index()
  }

  class Pedido {
    -id
    -cliente
    -detalles
    +getters/setters
  }

  class IOrderManager {
    <<interface>>
    +crearPedido(p)
    +actualizarPedido(p)
    +eliminarPedido(id)
    +buscarPedidoPorClienteYId(c, id)
    +obtenerTodos()
  }

  class OrderManager {
    -pedidos
    -paymentProcessor
  }

  class IPaymentProcessor {
    <<interface>>
    +procesarPago(pedido)
  }

  class PaymentProcessor {
    +procesarPago(pedido)
  }

  class IAuthenticator {
    <<interface>>
    +comprobacion(usuario, password)
  }

  class Authenticator {
    +comprobacion(usuario, password)
  }

  class IDataBaseManager {
    <<interface>>
  }

  class DataBaseManager {
    -instancia
    +getInstance()
  }

  PedidoController --> OrderManager
  LoginController --> Authenticator
  LoginController --> LoginRequest
  OrderManager --> Pedido
  OrderManager --> IPaymentProcessor
  PaymentProcessor --|> IPaymentProcessor
  OrderManager --|> IOrderManager
  Authenticator --|> IAuthenticator
  DataBaseManager --|> IDataBaseManager
  Authenticator --> DataBaseManager
